--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo">
-            
-            </a>
+            <a href="https://alexsunner.github.io/cv-tutorial/index.html" class="col-md-4 logo"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
