--- a/resume.html
+++ b/resume.html
@@ -14,12 +14,12 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a class="col-md-4 logo" href="02-index.html"></a>
+            <a class="col-md-4 logo" href="https://alexsunner.github.io/cv-tutorial/index.html"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Alexander Sunnerhage</h1>
-                        <h2 class="title"> Full Stack Developer</h2>
+                        <h2 class="title">Full Stack Software Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
