--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css" type="text/css" />
     <script src="https://kit.fontawesome.com/0cf17fd7b0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Alex</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Rosie</title>
 </head>
 <body>
     <header>
@@ -19,23 +19,23 @@
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Alexander Sunnerhage</h1>
-                        <h2 class="title">Full Stack Software Developer</h2>
+                        <h2 class="title"> Full Stack Software Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
                                 <a href="https://alexsunner.github.io/cv-tutorial/index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
                                 <a href="https://alexsunner.github.io/cv-tutorial/resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
                                 <a href="https://alexsunner.github.io/cv-tutorial/contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -43,7 +43,6 @@
             </div>
         </div>
     </header>
-
     <section class="container-fluid">
         <div class="row">
             <div class="col-md-4 bg-color-personal-info section-column">
@@ -118,8 +117,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Software Developer with a wealth of diverse
-                                    life and technical experience that I bring to every project.
+                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -132,9 +130,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective
-                                    design combined with application speed, security and reliability combine to
-                                    create a great user experience.
+                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
                                 </p>
                             </div>
                         </div>
@@ -145,11 +141,9 @@
                                 <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Why hire Me?</h4>
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent
-                                    communicator who thrives in bright and enthusiastic teams and
-                                    I'm also a self starter when working solo.
+                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
@@ -157,22 +151,21 @@
                 </div>
             </div>
         </div>
+        
     </section>
-
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Software Developer. Skilled in everything from HTML to Heroku.
-                    The capacity for structural and design thinking.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -220,7 +213,6 @@
                 </ul>
             </div>
         </div>
-
     </footer>
 </body>
 </html>
