--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <script src="https://kit.fontawesome.com/0cf17fd7b0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Alex</title>
 </head>
 <body>
     <header>
